avidec: skip seek pos adjustment for non interleaved files. Fixes Ticket327

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>